# near-email-auth

./: .gitignore  README.md
auth/: Cargo.toml  build.sh  deploy.sh
auth/src/: empty_email.eml  invalid_message.eml  lib.rs  message.eml
sender/: Cargo.toml
sender/src/: add_key.eml  init.eml  main.rs
worker/: Cargo.toml
worker/src/: lib.rs
