[package]
name = "sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-jsonrpc-client = "0.4.1"
near-crypto = "0.15.0"
near-primitives = "0.15.0"
near-chain-configs = "0.15.0"
near-jsonrpc-primitives = "0.15.0"
serde_json = "1.0.85"


tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
